--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install prerequisites
-  ansible.builtin.apt:
-    become: yes
+  become: true
+  ansible.builtin.apt:  
     name: '{{ item }}'
     state: present
   with_items: '{{ linux_logging_prerequisites }}'
