--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,34 +4,34 @@
   ansible.builtin.apt:  
     name: '{{ item }}'
     state: present
-  with_items: '{{ linux.logging.prerequisites }}'
+  with_items: '{{ linux_logging_prerequisites }}'
 
 - name: Remove old data
   become: true
   file:
-    path: '{{ linux.logging.gitfolder }}'
+    path: '{{ linux_logging_gitfolder }}'
     state: absent
 
 - name: Create GIT folder
   become: true
   file:
-    path: '{{ linux.logging.gitfolder }}'
+    path: '{{ linux_logging_gitfolder }}'
     state: directory
 
 - name: Clone github repository
   become: true
   shell: |
-    cd '{{ linux.logging.gitfolder }}'
-    git clone '{{ linux.logging.githubrepository }}'
+    cd '{{ linux_logging_gitfolder }}'
+    git clone '{{ linux_logging_githubrepository }}'
 
 - name: Stop Docker container
   become: true
   shell: |
-    cd '{{ linux.logging.gitfolder }}/vagrant-ubuntu-docker-host'
+    cd '{{ linux_logging_gitfolder }}/democloud-docker-logging'
     docker-compose rm --stop --force
 
 - name: Create Docker container
   become: true
   shell: |
-    cd '{{ linux.logging.gitfolder }}/vagrant-ubuntu-docker-host'
+    cd '{{ linux_logging_gitfolder }}/democloud-docker-logging'
     docker-compose up -d
